legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr71727-2.c-5.4.0-3.out.txt
pr71727-2.c:4:9: error: attribute(target("+nosve")) is unknown
 #pragma GCC target "+nosve"
         ^
